--- a/index.css
+++ b/index.css
@@ -1,3 +1,22 @@
+
 #game{
 	border:1px solid black;
+	background-color: black;
+
+}
+#ScoreBoard{
+background-color: black;
+
+}
+#score #level{
+	color:white;
+}
+#center{
+	margin-left:12px;
+	width:53vw;
+	height:1vh;
+
+}
+body{background-image: url(./img/bg5.jpg);
+	overflow-x:hidden;
 }
